Fixed layout issues on the page
Text overlaying each other in the 'Configuration Parameters' and 'MentionSuggestions' sections

--- a/docs/client/components/pages/Mention/styles.css
+++ b/docs/client/components/pages/Mention/styles.css
@@ -9,12 +9,12 @@
 
 .paramName {
   font-weight: bold;
-  width: 125px;
+  margin-right: 5px;
   display: inline-block;
 }
 
 .subParams {
-  margin-left: 125px;
+  margin-left: 52px;
   margin-top: 10px;
 }
 
